--- a/css/schedule.css
+++ b/css/schedule.css
@@ -73,7 +73,14 @@ th {
 
 .allEvents {
   font-family: Calibri, "Calibri Light", sans-serif;
-  margin-bottom: 20px;
+  padding-bottom: 5px;
+}
+
+.allEvents .pencil_icon {
+  width: 110px;
+  height: 55px;
+  background: url("../img/school.png") no-repeat center;
+  background-size: 110px 55px;
 }
 
 .allEvents h2 {
