--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: red dotted 2px;   
+}
+
 body {
     font-family: Calibri, "Calibri Light", sans-serif;
     font-weight: 100;
