--- a/css/contact.css
+++ b/css/contact.css
@@ -23,10 +23,13 @@
     margin-left: 30px;
 }
 
-#subItemContainer {
+#subItemContainer, #emailPic {
     width: 100%;
     height: 100px;
     margin: 40px auto 10px;
+}
+
+#subItemContainer {    
     background: url("../img/smartphone.png") left center no-repeat;
     background-size: 65px 100px;
 }
@@ -42,58 +45,9 @@
     color: red;
 }
 
-#formSection {
-    width: 100%;
-    margin: 30px 0;
-}
-
-
-#formSection .formGroup {
-	margin-bottom: 15px;
-}
-
-label {
-	display: inline-block;
-    width: 28%;
-    font-size: 0.9em;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-input, textarea, .formGroupSubmit #submit {
-    font-family: Calibri, "Calibri Light", sans-serif;
-    font-weight: 100;
-    font-size: 1.2em;
-}
-
-input {
-	width: 67%;
-    margin-left: 3%;
-	height: 25px;
-	padding-left: 5px;
-}
-
-textarea {
-	display: block;
-	width: 100%;
-	margin-top: 20px;
-	resize: none;
-	padding: 5px;
-}
-
-#submit{
-	display: block;
-	margin: auto;
-	width: 150px;
-    height: 40px;
-	background-color: red;
-	color: white;
-	font-variant: small-caps;
-	border: 1px solid pink;
-}
-
-.formGroupSubmit #submit:hover {
-	background-color: rgba(128, 0, 0, 0.7);
+#emailPic {
+    background: url(../img/comp.png) right center no-repeat;
+    background-size: 133px 100px;
 }
 
 @media screen and (min-width: 434px) {
@@ -101,29 +55,23 @@ textarea {
         margin-top: 50px;
     }
 
-    #subItemContainer {
+    #subItemContainer, #emailPic {
         height: 200px;
         margin: 50px auto 10px;
+    }
+
+    #subItemContainer {
         background-size: 129px 200px;
     }
 
     .subItems {
         margin-left: 132px;
         padding-top: 50px;
-    }
+    } 
 
-    #formSection {
-        margin: 40px 0;
-    }
-
-    label {
-        width: 20%;
-    }
-
-    input {
-        width: 75%;
-        margin-left: 4%;
-    }    
+    #emailPic {
+        background-size: 266px 200px;
+    }  
 }
 
 @media screen and (min-width: 544px) {
@@ -134,6 +82,10 @@ textarea {
     .options {
         font-size: 0.9em;
         margin-left: 50px;
+    }
+
+    #subItemContainer, #emailPic {
+        height: 300px;
     }
 
     #subItemContainer {
@@ -147,45 +99,23 @@ textarea {
         font-size: 0.8em;
     }
 
-    #formSection {
-        width: 95%;
-        margin: 50px 0;
-    }
-
-    label {
-        font-size: 1em;
-    }
-
-    input, textarea, .formGroupSubmit #submit {
-        font-size: 1.4em;
-    }  
+    #emailPic {
+        background-size: 372px 280px;
+    } 
 }
 
 @media screen and (min-width: 672px) {
     .options {
         font-size: 1em;
     }
-
-    #formSection {
-        width: 90%;
-    }
-
-    label {
-        font-size: 1.1em;
-    }
-
-    input, textarea, .formGroupSubmit #submit {
-        font-size: 1.5em;
-    }
-
-    input {
-        height: 30px;
-    }
 }
 
 @media screen and (min-width: 800px) {
+    #subItemContainer, #emailPic {
+        height: 400px;        
+    }
+
     #subItemContainer {
-        height: 400px;
         background-size: 258px 400px;
     }
 
@@ -193,30 +123,44 @@ textarea {
         margin-left: 300px;
     }
 
-    #formSection {
-        width: 85%;
+    #emailPic {
+        background-size: 532px 400px;
     }
 }
 
 @media screen and (min-width: 987px) {
+    #subItemContainer, #emailPic {
+        height: 300px;        
+    }
+
     #subItemContainer {
-        height: 300px;
         background-size: 181px 280px;
     }
 
     .subItems {
         margin-left: 180px;
+    }
+
+    #emailPic {
+        background-size: 372px 280px;
     }   
 }
 
 @media screen and (min-width: 1200px) {
+    #subItemContainer, #emailPic {
+        height: 400px;        
+    }
+
     #subItemContainer {
-        height: 400px;
         background-size: 258px 400px;
     }
 
     .subItems {
         margin-left: 300px;
         padding-top: 100px;
-    }   
+    }
+
+    #emailPic {
+        background-size: 532px 400px;
+    } 
 }
