--- a/css/schedule.css
+++ b/css/schedule.css
@@ -122,6 +122,7 @@ th {
 @media screen and (min-width: 434px) {
     #eventInfoHeader {
         width: 7%;
+        height: 380px;
     }
 
     #eventInfo {
