--- a/css/contact.css
+++ b/css/contact.css
@@ -25,11 +25,11 @@
 
 #subItemContainer, #emailPic {
     width: 100%;
-    height: 100px;
     margin: 40px auto 10px;
 }
 
-#subItemContainer {    
+#subItemContainer {  
+    height: 100px;  
     background: url("../img/smartphone.png") left center no-repeat;
     background-size: 65px 100px;
 }
@@ -45,9 +45,16 @@
     color: red;
 }
 
+#emailPic p {
+    color: red;
+    font-weight: 400;
+    margin: 0 0 0 40px;
+}
+
 #emailPic {
-    background: url(../img/comp.png) right center no-repeat;
-    background-size: 133px 100px;
+    height: 150px;
+    background: url(../img/comp.png) right bottom no-repeat;
+    background-size: 131px 100px;
 }
 
 @media screen and (min-width: 434px) {
@@ -56,11 +63,11 @@
     }
 
     #subItemContainer, #emailPic {
-        height: 200px;
         margin: 50px auto 10px;
     }
 
     #subItemContainer {
+        height: 200px;
         background-size: 129px 200px;
     }
 
@@ -69,8 +76,13 @@
         padding-top: 50px;
     } 
 
+    #emailPic p {
+        margin: 0 0 0 60px;
+    }
+
     #emailPic {
-        background-size: 266px 200px;
+        height: 250px;
+        background-size: 263px 200px;
     }  
 }
 
@@ -84,10 +96,6 @@
         margin-left: 50px;
     }
 
-    #subItemContainer, #emailPic {
-        height: 300px;
-    }
-
     #subItemContainer {
         height: 300px;
         background-size: 181px 280px;
@@ -99,8 +107,13 @@
         font-size: 0.8em;
     }
 
+    #emailPic p {
+        margin: 0 0 0 90px;
+    }
+
     #emailPic {
-        background-size: 372px 280px;
+        height: 330px;
+        background-size: 368px 280px;
     } 
 }
 
@@ -108,14 +121,15 @@
     .options {
         font-size: 1em;
     }
+
+    #emailPic p {
+        margin: 0 0 0 100px;
+    }
 }
 
 @media screen and (min-width: 800px) {
-    #subItemContainer, #emailPic {
-        height: 400px;        
-    }
-
     #subItemContainer {
+        height: 400px;
         background-size: 258px 400px;
     }
 
@@ -123,17 +137,19 @@
         margin-left: 300px;
     }
 
+    #emailPic p {
+        margin: 0 0 0 110px;
+    }
+
     #emailPic {
-        background-size: 532px 400px;
+        height: 450px;
+        background-size: 525px 400px;
     }
 }
 
 @media screen and (min-width: 987px) {
-    #subItemContainer, #emailPic {
-        height: 300px;        
-    }
-
     #subItemContainer {
+        height: 300px;
         background-size: 181px 280px;
     }
 
@@ -141,17 +157,19 @@
         margin-left: 180px;
     }
 
+    #emailPic p {
+        margin: 0 0 0 110px;
+    }
+
     #emailPic {
-        background-size: 372px 280px;
+        height: 330px;
+        background-size: 368px 280px;
     }   
 }
 
 @media screen and (min-width: 1200px) {
-    #subItemContainer, #emailPic {
-        height: 400px;        
-    }
-
     #subItemContainer {
+        height: 400px;
         background-size: 258px 400px;
     }
 
@@ -160,7 +178,12 @@
         padding-top: 100px;
     }
 
+    #emailPic p {
+        margin: 0 0 0 120px;
+    }
+
     #emailPic {
-        background-size: 532px 400px;
+        height: 450px;
+        background-size: 525px 400px;
     } 
 }
