--- a/css/index.css
+++ b/css/index.css
@@ -58,8 +58,18 @@ nav a:hover {
 }
 
 #header {
+    position: relative;
     height: 167px;
     margin: 48px auto 10px;
+    color: gray;
+    font-size: 0.8em;
+}
+
+#header-pic {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
     background: url("../img/header.jpg") center no-repeat;
     background-size: 290px 167px;
 }
@@ -278,7 +288,10 @@ footer {
     }
 
     #header {
-        height: 232px;
+        height: 232px;        
+    }
+
+    #header-pic {
         background-size: 380px 232px;
     }
 
@@ -353,6 +366,9 @@ footer {
 
     #header {
         height: 250px;
+    }
+
+    #header-pic {
         background-size: 480px 250px;
     }
 
@@ -417,7 +433,10 @@ footer {
     }
 
     #header {
-        height: 206px;
+        height: 206px;        
+    }
+
+    #header-pic {
         background-size: 580px 206px;
     }
 
@@ -473,7 +492,10 @@ footer {
     }
 
     #header {
-        height: 229px;
+        height: 229px;        
+    }
+
+    #header-pic {
         background-size: 700px 229px;
     }
 
@@ -534,7 +556,10 @@ footer {
     }
 
     #header {
-        height: 250px;
+        height: 250px;        
+    }
+
+    #header-pic {
         background-size: 900px 250px;
     }
 
@@ -592,7 +617,10 @@ footer {
     }
 
     #header {
-        height: 300px;
+        height: 300px;        
+    }
+
+    #header-pic {
         background-size: 1100px 300px;
     }
 
